# deskpet

./: .gitignore  AGENTS.md  LICENSE  README.md  deskpet.spec  pyproject.toml
.github/workflows/: build.yml
deskpet/: __init__.py  main.py  tray.py
deskpet/chat/: __init__.py  base.py  registry.py  static.py
deskpet/commands/: __init__.py  base.py
deskpet/config/: __init__.py  settings.py
deskpet/pet/: __init__.py  engine.py  overlay.py  overlay_console.py  overlay_win.py  sprites.py
deskpet/ui/: __init__.py  chat_dialog.py  import_dialog.py
deskpet/utils/: sprite_importer.py
scripts/: build.py  generate_logo.py  generate_sprites.py
