[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskpet"
version = "0.1.0"
description = "A customizable desktop pet application for Windows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
include = ["deskpet*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
deskpet = "deskpet.main:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
